--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,7 +11,7 @@
 }
 
 .bg-image {
-    background-image: url('../../asset/img/logo/dog.png');
+    background-image: url('../../asset/img/logo/sahabathewan1.png');
     background-size: 10;
     background-position: center center;
 }
